--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,48 @@ body {
 .pixel:hover {
     background-color: black !important;
 }
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.slidecontainer {
+    width: 80%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s; 
+    transition: opacity .2s;
+    border-radius: 25px;
+  }
+  
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 25px;
+    width: 25px;
+    height: 25px;
+    background: hwb(226 29% 14%);
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: hwb(226 29% 14%);
+    cursor: pointer;
+}
