--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@ body {
 }
 
 .sketch-pad {
-    background-color: rgb(206, 206, 206);
+    background-color: #fff;
+    border: 3px black solid;
     width: 500px;
     height: 500px;
     display: flex;
@@ -32,29 +33,36 @@ body {
     align-content: flex-start;
 }
 
-.controls {
-    height: 500px;
-    width: 250px;
-    background-color: rgb(223, 223, 223);
+.sketch-pad:hover {
+    cursor: url(assets/pencil.svg), auto;
 }
 
 .pixel {
-    background-color: aliceblue;
-}
-
-.pixel:hover {
-    background-color: black !important;
+    background-color: #fff;
 }
 
 .controls {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    height: 500px;
+    width: 250px;
+    background-color: rgb(223, 223, 223);
+}
+
+.controlhead {
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 20px;
 }
 
 .slidecontainer {
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 50px;
 }
 
 .slider {
@@ -84,9 +92,37 @@ body {
     cursor: pointer;
 }
 
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    background: hwb(226 29% 14%);
-    cursor: pointer;
+#colordisplay {
+    padding-left: 10px;
+}
+
+#colorPick {
+    border: none;
+    padding: 5px;
+    width: 70px;
+}
+
+#resetbtn,
+#eraser {
+    border: none;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 15px;
+    margin-top: 10px;
+    color: rgb(117, 117, 117);
+    transition: all 150ms;
+}
+
+#resetbtn:hover,
+#eraser:hover {
+    cursor:pointer;
+    background-color: rgb(236, 236, 236);
+}
+
+#eraser.active {
+    background-color: rgb(190, 190, 190);
+}
+
+.control {
+    font-size: 18px;
 }
